--- a/sensor/firmware/Makefile
+++ b/sensor/firmware/Makefile
@@ -102,6 +102,7 @@ CFLAGS += -DBLE_STACK_SUPPORT_REQD
 CFLAGS += -DSWI_DISABLE0
 CFLAGS += -DNRF51822
 CFLAGS += -DNRF_SD_BLE_API_VERSION=2
+CFLAGS += -DNRF_LOG_USES_RTT=1
 CFLAGS += -mcpu=cortex-m0
 CFLAGS += -mthumb -mabi=aapcs
 CFLAGS +=  -Wall -Werror -Og -g3
