--- a/sensor/firmware/Makefile
+++ b/sensor/firmware/Makefile
@@ -105,11 +105,13 @@ CFLAGS += -DNRF_SD_BLE_API_VERSION=2
 CFLAGS += -DNRF_LOG_USES_RTT=1
 CFLAGS += -mcpu=cortex-m0
 CFLAGS += -mthumb -mabi=aapcs
-CFLAGS +=  -Wall -Werror -Og -g3
+CFLAGS += -Wall -Werror -O2 -g3
 CFLAGS += -mfloat-abi=soft
 # keep every function in separate section, this allows linker to discard unused ones
 CFLAGS += -ffunction-sections -fdata-sections -fno-strict-aliasing
 CFLAGS += -fno-builtin --short-enums 
+# for debug
+#CFLAGS += -DDEBUG
 
 # C++ flags common to all targets
 CXXFLAGS += \
